Bug 61059 - FILEOPEN: XLS Calc warns of macros, but there are no macros in doc
Summary: FILEOPEN: XLS Calc warns of macros, but there are no macros in doc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: bibisected40 target:4.2.0 target:4.1.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-02-18 12:17 UTC by Roman Polach
Modified: 2014-12-01 02:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
XLS doc causing described problem (18.50 KB, application/vnd.ms-excel)
2013-02-18 12:17 UTC, Roman Polach
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Polach 2013-02-18 12:17:38 UTC
Created attachment 75041 [details]
XLS doc causing described problem

Attached XLS document does NOT contain
any macro, but it contains an empty structure
for macros. There is no danger from that,
but Calc 4.0.0 asks for enabling/disabling
macros every time the file is opened.

There was no such problem in 3.6.5 or earlier
versions of LO. Calc should return to 3.*.*
behavior for that. Very annoying.

Attaching the XLS document which causes problem in 4.0.0.
Comment 1 Roman Polach 2013-06-17 14:24:55 UTC
Because this is a regression,
I tried bibisect 4.0
and found this hash:
source-hash-cbc44df67cfd13849f3de85edcdd39b5fec8b06c


----------------- complete output of last bibisect round ---------------------
 3352110c522079addee1177ddb516fa5688714d4 is the first bad commit
commit 3352110c522079addee1177ddb516fa5688714d4
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 12:09:25 2012 +0000

    source-hash-cbc44df67cfd13849f3de85edcdd39b5fec8b06c
    
    commit cbc44df67cfd13849f3de85edcdd39b5fec8b06c
    Author:     Ricardo Montania <ricardo@linuxafundo.com.br>
    AuthorDate: Thu Sep 13 12:17:40 2012 -0300
    Commit:     Olivier Hallot <olivier.hallot@alta.org.br>
    CommitDate: Fri Sep 14 00:00:16 2012 +0000
    
        ::rtl::OUString to OUString in avmedia
    
        Change-Id: If4a7bef339a626fbfa9f0c1cc76801e77626f38f
        Reviewed-on: https://gerrit.libreoffice.org/609
        Reviewed-by: Olivier Hallot <olivier.hallot@alta.org.br>
        Tested-by: Olivier Hallot <olivier.hallot@alta.org.br>

:100644 100644 348c629fa92c4a0b53e86c0304e003774f38b333 acdca6c17f4c0dd7bfa3cd0c3ad12e8ed73f5a2e M	autogen.log
:100644 100644 44293ef104571a1eaf6bfecd43d4a01702bdf52c 2aca08ced58167dae2383572aeee1e49c0756c68 M	ccache.log
:100644 100644 86a37681bb8cfd44d04534e14b93dfd45cf0fe63 81dd9936a04fbfc80ea8bc5c8d4c92d053b3e9bb M	commitmsg
:100644 100644 ba1824fe7a9f7615a41309f3f318d62e2c4a7589 d2681c27aa06a86932e1b3e4021a9d75cb61de62 M	dev-install.log
:100644 100644 5ee43aee8b36e6868002119bee285d15f5000fe0 eb52a19676790fc6c5117fc9dc1d5043eb3e92e9 M	make.log
:040000 040000 a363beeec352e9ce16ad9cc261f62b98edc79d12 7557b6845365f7a30168426ca282582843096a74 M	opt



----------------- output of git bisect log -------------------------

# bad: [5b4b36d87517a6ea96ff8c84c46b12f462fc9a1a] source-hash-8450a99c744e9005f19173e4df35d65640bcf5c4
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9] source-hash-099198a4224778fe6e43f5dc13b5b9b1b4dc828c
git bisect good 16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9
# good: [f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a] source-hash-a581d31b227623e09d2970a91214fda398f98eda
git bisect good f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a
# bad: [114fd3b76bcba890e6d702d00cef910f1493c262] source-hash-64ab96cd15e52da88781e720d6f031dbcd0ba902
git bisect bad 114fd3b76bcba890e6d702d00cef910f1493c262
# bad: [6af64581913aa7ce3fcf0890fe671830d416a6ea] source-hash-06a8ca9339f02fccf6961c0de77c49673823b35f
git bisect bad 6af64581913aa7ce3fcf0890fe671830d416a6ea
# good: [f6275e54c182c5a8ed2368418445d84beb165d58] source-hash-d9412fb4755377b8358a46a249cfe29a22ea9451
git bisect good f6275e54c182c5a8ed2368418445d84beb165d58
# bad: [6fd77ab0ce2ce86c665515e8cfbcc2e80627a669] source-hash-c7692ae82b4c81c2ea8a9e3ee496ee525c0d44f4
git bisect bad 6fd77ab0ce2ce86c665515e8cfbcc2e80627a669
# bad: [aefa1263d1642e8d9677d385f492530ae0725fc6] source-hash-e63bba0013e5ce34cd04559632206bb7c891eebe
git bisect bad aefa1263d1642e8d9677d385f492530ae0725fc6
# bad: [3352110c522079addee1177ddb516fa5688714d4] source-hash-cbc44df67cfd13849f3de85edcdd39b5fec8b06c
git bisect bad 3352110c522079addee1177ddb516fa5688714d4
Comment 2 Roman Polach 2013-06-19 11:18:23 UTC
I wanted to get list of git revisions in the result set, following https://wiki.documentfoundation.org/QA/HowToBibisect#How_to_pickup_bugs_that_are_bibisected
but I got an error. What am I doing wrong?

git log d9412fb4755377b8358a46a249cfe29a22ea9451..cbc44df67cfd13849f3de85edcdd39b5fec8b06c

fatal: Invalid revision range d9412fb4755377b8358a46a249cfe29a22ea9451..cbc44df67cfd13849f3de85edcdd39b5fec8b06c
Comment 3 Roman Polach 2013-06-25 16:48:43 UTC
Still an issue in 4.1.0.1 (rc1)
Comment 4 Roman Polach 2013-06-26 10:50:32 UTC
Still an issue in git master (yesterday)
Comment 5 Roman Polach 2013-07-09 13:41:35 UTC
This regression is still present in 4.1.0 rc2!
please how do I identify the patch after (already
done) bibisecting?
Comment 6 Roman Polach 2013-07-19 10:26:29 UTC
This regression is still present in 4.1.0 rc3.
Comment 7 Roman Polach 2013-08-19 14:38:56 UTC
This regression is still present in final 4.1.0.4
Comment 8 Roman Polach 2013-08-29 15:20:51 UTC
This regression is still present in final 4.1.1.2.
Can anybody please help me with problem identifying
the patch after bibisectting?
Comment 9 Roman Polach 2013-10-07 11:03:56 UTC
This regression is still present in final 4.1.2.3.
Can anybody please help me with problem identifying
the patch after bibisectting?
Comment 10 Roman Polach 2013-11-01 14:51:03 UTC
This regression is still present in both final 4.0.6 and final 4.1.3
Comment 11 Maxim Monastirsky 2013-11-02 20:57:35 UTC
Hi,
Here is the list of commits from the range you specified:
http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=d9412fb4755377b8358a46a249cfe29a22ea9451..cbc44df67cfd13849f3de85edcdd39b5fec8b06c

The following commits might be related:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=4597483e00bffcc4e30d379dcf6fad42bc565e56
http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6c18caef16b9eb0742c2a2cbb724e66bb31c3c3

I changed the 'Version' back to 4.0.0.3, as it's the oldest known. See https://wiki.documentfoundation.org/QA/Bugzilla/Fields/Version#How_we_use_this_field.

Also changed 'Platform' to 'All', as I can reproduce under Fedora 19 (64-bit).
Comment 12 Roman Polach 2013-11-02 21:55:33 UTC
Thank you, Maxim!

Could some LibO developers look at these patches please?
Comment 13 Commit Notification 2013-11-02 22:10:17 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e803712c4c2b844dab1fefdfbda12058a5f1ab7

don't warn for empty VBA structure, fdo#61059



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2013-11-05 13:38:32 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62308b65adf5980875753da4069156af79fbbfd4&h=libreoffice-4-1

don't warn for empty VBA structure, fdo#61059


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Roman Polach 2013-11-27 11:03:38 UTC
I was not successful with downloading daily build for Windows,
but I tried 4.2.0.0beta1 and using it, the problem is gone.
Thanks!
Comment 16 Roman Polach 2013-12-03 12:25:44 UTC
Also I have tested 4.1.4 RC1, seems to be ok.
Comment 17 Roman Polach 2014-10-30 15:25:45 UTC
Unfortunately the problem is back,
at least with 4.3.3 (.2-final).
Comment 18 Markus Mohrhard 2014-12-01 02:21:45 UTC
Don't reopen this bug report. The original bug is fixed.

The new problem is totally different as the VBAProject is actually no longer empty after some other fixes. We import more data now which results in the old check not being enough. However I'm not sure if there is an easy fix for this problem and if we want to fix it.

Reopening a bug report is only appropiate if a bug fix by a developer is not enough. In this bug report the original bug was fixed and the new problem is another bug with the same symptoms.