don't warn for empty VBA structure, fdo#61059

Change-Id: I0d0f7fa216fcea7ca893120ad183dc3758ca51d4